--- a/PHYS137A/Lectures/lecture20.tex
+++ b/PHYS137A/Lectures/lecture20.tex
@@ -1,7 +1,7 @@
 \section{Lecture 20: Angular Momentum, Part 2}
 
 Is is obvious that:
-\[ [hat{x}_i, \hat{p}_j] = i \hbar \delta_{ij}, [hat{x}_i, \hat{x}_j] = [hat{p}_i, \hat{p}_j] = 0 \]
+\[ [\hat{x}_i, \hat{p}_j] = i \hbar \delta_{ij}, [\hat{x}_i, \hat{x}_j] = [\hat{p}_i, \hat{p}_j] = 0 \]
 We showed last time that:
 \[ [\hat{L}_i, \hat{L}_j] = i \hbar \hat{L}_k \delta_{ij}, [\hat{L}^2, \hat{L}_z] = 0 \]
 
