--- a/PHYS137A/Lectures/lecture25.tex
+++ b/PHYS137A/Lectures/lecture25.tex
@@ -23,7 +23,7 @@ the last one doesn't actually work. Let's see this.
 We know $j_{max} = j_1 + j_2$ and $j_{min} = |j_1 - j_2|$.
 \begin{align*}
     \hat{J}_z \ket{j_1 j_2 m_1 m_2} &= \hat{J}_z \ket{j_1 m_1} \ket{j_2 m_2} \\
-    &= (\hat{J}_{1z} \otimes \hat{I} + \hat{I} \otimes \hat{J}_{2z}) \ket{j_1 m_1} \ket{j_2 m_2}
+    &= (\hat{J}_{1z} \otimes \hat{I} + \hat{I} \otimes \hat{J}_{2z}) \ket{j_1 m_1} \ket{j_2 m_2}\\
     &= (m_1 + m_2)\hbar \ket{j_1 m_1} \ket{j_2 m_2} \\
     &= (m_1 + m_2)\hbar \ket{j_1 j_2 m_1 m_2}
 \end{align*}
