--- a/PHYS137A/Lectures/lecture28.tex
+++ b/PHYS137A/Lectures/lecture28.tex
@@ -50,7 +50,7 @@ The Hamiltonian for the reduced coordinate $r$ is:
 
 This gives Schrodinger equation:
 \begin{align*}
-    [-\frac{\hbar^2}{2\mu}\nabla^2 - \frac{ze^2}{4\pi\epsilon_0 r}] \Psi(\mbf{r}) &= E \Psi(\mbf{r})
+    \qty[-\frac{\hbar^2}{2\mu}\nabla^2 - \frac{ze^2}{4\pi\epsilon_0 r}] \Psi(\mbf{r}) &= E \Psi(\mbf{r})
 \end{align*}
 We know for a central potential, this is separable:
 \[ \Psi_{E\ell m}(\mbf{r}) = R_{E \ell}(r) Y_{\ell m}(\theta, \phi) \]
