--- a/PHYS137A/Lectures/lecture30.tex
+++ b/PHYS137A/Lectures/lecture30.tex
@@ -12,13 +12,13 @@ This is well known:
 \[ _1F_1(a, c, z) \to \frac{\Gamma{c}}{\Gamma(a)} e^z z^{a - c} \to \rho^{-\ell - 1 - \lambda} e^{\rho} \]
 This means $U(\rho) \sim \rho^{-\lambda} e^{\rho/2}$, which is not normalizable. Thus, we must terminate the series.
 
-Then, $_1F_1$ reduces to a polynomial of degree $n_r$. This is related to the ``Associate Laguerie'' polynomials.
+Then, $_1F_1$ reduces to a polynomial of degree $n_r$. This is related to the ``Associate Laguerre'' polynomials.
 \[ L_{n + \ell}^{2\ell + 1}(\rho) = - \frac{\qty[(n + \ell)!]^2}{(n - \ell - 1)! (2\ell + 1)!} _1F_1(\ell + 1 - n, 2\ell + 2, \rho) \]
-We can generate (regular) Laguerie polynomials really nicely:
+We can generate (regular) Laguerre polynomials really nicely:
 \[ L_q(\rho) = e^{\rho} \dv{^q}{\rho^q} \qty(\rho^q e^{-\rho}) \]
-and then the Associated Laguerie polynomials look like:
+and then the Associated Laguerre polynomials look like:
 \[ L_q^p = \dv{^p}{\rho^p} L_q(\rho) \]
-All we need to know is that the associated laguerie polynomials are the solutions, with the eigenenergies we discussed above.
+All we need to know is that the associated Laguerre polynomials are the solutions, with the eigenenergies we discussed above.
 Thus, the full radial functions are for some normalization constant $N$:
 \begin{align*}
     R_{n \ell}(r) = N e^{-\rho/2} \rho^{\ell} L_{n + 1}^{2\ell + 1}(\rho)
