--- a/CS191/preamble.tex
+++ b/CS191/preamble.tex
@@ -28,6 +28,7 @@
 
 \usepackage{tikz}
 \usetikzlibrary{shapes, arrows, positioning, graphs}
+\usetikzlibrary{quantikz}
 \usepackage{caption}
 \usepackage{tikz-qtree}
 \usepackage{tikz-cd}
@@ -197,7 +198,7 @@
 
 %%% Linear Algebra
 % Operators
-\DeclareMathOperator{\proj}{proj}  % Projection
+% \DeclareMathOperator{\proj}{proj}  % Projection
 \DeclareMathOperator{\Span}{span}  % Vector/Matrix Span
 \DeclareMathOperator{\range}{range}  % Range (span of columns)
 \DeclareMathOperator{\Null}{null }  % Null space
