--- a/CS191/Lectures/lecture3.tex
+++ b/CS191/Lectures/lecture3.tex
@@ -122,7 +122,7 @@ If $a$ and $b$ are pure bits, then we have the following truth table (the first 
 \end{tabular}
 \end{center}
 
-What if I did the following?
+What if I did the following? I will input $\ket{+} \ket{0} = \ftwo \ket{00} + \ftwo \ket{10}$.
 
 \begin{quantikz}
     \lstick{$\ket{+}$} & \ctrl{1} & \qw\rstick[wires=2]{$\ket{\Phi^+} = \ftwo\ket{00} + \ftwo\ket{11}$} \\
