--- a/CS191/Lectures/lecture3.tex
+++ b/CS191/Lectures/lecture3.tex
@@ -183,7 +183,7 @@ What happened here? In the first case, there is a cancellation of the probabilit
 \[ \ftwo \ket{0} + \ftwo \ket{1} \mapsto_{H} \frac{1}{2} \ket{0} + \frac{1}{2} \ket{1} + \frac12 \ket{0} - \frac12 \ket{1} = \ket{0} \]
 But in the second case, we have an entanglement which stops this cancellation (the product states cannot just be cancelled).
 
-This gives us a view into what entanglement really is. What if we entangle a bunch of bits:
+This gives us a view into what measurement really is. What if we entangle a bunch of bits:
 
 \begin{quantikz}
     \lstick{$\alpha\ket{0} + \beta\ket{1}$} & \ctrl{1} & \ctrl{2} & \ctrl{3} & \ctrl{4} & \ctrl{5} & \ctrl{6} & \ctrl{7} & \qw\rstick[wires=8]{$\alpha \ket{00000000} + \beta \ket{11111111}$} \\
