--- a/CS191/preamble.tex
+++ b/CS191/preamble.tex
@@ -29,6 +29,7 @@
 \usepackage{tikz}
 \usetikzlibrary{shapes, arrows, positioning, graphs}
 \usetikzlibrary{quantikz}
+\usetikzlibrary{decorations.pathmorphing}
 \usepackage{caption}
 \usepackage{tikz-qtree}
 \usepackage{tikz-cd}
