--- a/CS191/lectures.tex
+++ b/CS191/lectures.tex
@@ -6,4 +6,5 @@
     \include{Lectures/lecture1.tex}
     \include{Lectures/lecture2.tex}
     \include{Lectures/lecture3.tex}
+    \include{Lectures/lecture4.tex}
 \end{document}
