--- a/CS191/lectures.tex
+++ b/CS191/lectures.tex
@@ -7,4 +7,5 @@
     \include{Lectures/lecture2.tex}
     \include{Lectures/lecture3.tex}
     \include{Lectures/lecture4.tex}
+    \include{Lectures/lecture5.tex}
 \end{document}
