--- a/CS191/preamble.tex
+++ b/CS191/preamble.tex
@@ -44,6 +44,7 @@
 \usepackage{physics}
 \usepackage{siunitx}
 \usepackage{mathtools}
+\usepackage{blkarray}
 
 \def\coursenumber{CS191}
 \def\class{Quantum Information Science}
